--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 dependencies = [
     "requests>=2.31.0",
     "click>=8.0.0",
+    "python-dotenv>=0.19.0",
 ]
 
 [project.optional-dependencies]
@@ -43,6 +44,7 @@ agent = [
 all = [
     "requests>=2.31.0",
     "click>=8.0.0",
+    "python-dotenv>=0.19.0",
     "mcp[cli]>=1.2.0",
     "openai>=1.0.0",
     "langgraph>=0.0.20",
